added vector class @TODO add tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,13 @@ project(ds)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(ds main.cpp)
+# include project header files
+include_directories(./include)
+
+# Set source files
+set(SOURCE_FILES 
+	src/Vector.cpp
+	src/main.cpp
+)
+
+add_executable(ds ${SOURCE_FILES})
